[workspace]
resolver = "3"
members = [
  "00_hello_world",
  "01_cargo_project",
  "02_variables",
  "03_scalar_compound_types",
  "04_functions",
  "05_control_flow",
  "06_ownership",
  "07_borrowing",
  "08_slices",
  "09_lifetimes",
  "10_structs",
  "11_enums_option",
  "12_pattern_matching",
  "13_collections",
  "14_error_handling",
  "15_custom_errors",
  "16_generics",
  "17_traits",
  "18_trait_objects",
  "19_closures",
  "20_iterators",
  "21_custom_iterator",
  "22_box",
  "23_rc",
  "24_refcell",
  "25_threads",
  "26_channels",
  "27_shared_state",
  "28_modules",
  "29_library",
  "30_testing",
  "31_doc_tests",
  "32_async_await",
  "33_async_tasks",
  "34_serde",
  "35_error_libs",
  "36_clap",
  "37_axum",
  "38_sqlite",
  "39_macros",
  "40_unsafe",
  "41_ffi",
  "42_todo_cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
